--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@nuxt/postcss8": "^1.1.3",
+    "@nuxtjs/composition-api": "^0.33.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "autoprefixer": "^10.4.7",
