--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
+    "@eggsydev/vue-lanyard": "^1.1.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@vue/composition-api": "^1.7.0",
     "axios": "^0.27.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "oh-vue-icons": "^1.0.0-rc3",
+    "swrv": "^0.9.6",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
