--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt": "^2.15.8",
     "oh-vue-icons": "^1.0.0-rc3",
     "swrv": "^0.9.6",
+    "v-tooltip": "^2.1.3",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
