--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    "format": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
     "@eggsydev/vue-lanyard": "^1.1.3",
